# Dimensionless-Rust-AI

./: .env.example  Cargo.toml  README.md  index.html  tailwind.config.js  trunk.toml
src/components/: chat_area.rs  landing.rs  mod.rs  type_area.rs
src/model/: agent.rs  appr.rs  config.rs  lib.rs  main.rs  server.rs  tools.rs
style/: custom.css  tailwind.css
